# BladesAndMonsters

./: .gitignore  README.md
client/: CMakeLists.txt  Taskfile.yml
client/content/animations/clouds/SunnyDayCloud/: Sprite.aseprite
client/content/maps/: village.lvl
client/libs/olcPixelGameEngine/: olcPixelGameEngine.h
client/libs/soloud/: CMakeLists.txt
client/src/: main.cpp
client/src/cAnimations/: cAnimations.cpp  cAnimations.h
client/src/cAssets/: cAssets.cpp  cAssets.h
client/src/cDynamics/: cDynamics.cpp  cDynamics.h
client/src/cDynamics/creatures/: orc.cpp  orc.h  witty.cpp  witty.h
client/src/cDynamics/objects/: cClouds.h  cTrees.h
client/src/cItem/: cItem.cpp  cItem.h
client/src/cItem/items/weapons/: cWeapon.h
client/src/cMaps/: cAnimations.cpp  cAnimations.h  cAssets.cpp  cAssets.h  cMap.cpp  cMap.h  cMapVillage.cpp  cMapVillage.h
client/src/cMaps/maps/: cMapVillage.cpp  cMapVillage.h
client/src/cMenu/: cMenu.h
client/src/cMenu/ItemMenu/: cItemMenu.cpp  cItemMenu.h
client/src/cMenu/cDefaultMenu/: cDefaultMenu.cpp  cDefaultMenu.h
client/src/cMenu/cInventory/: cInventory.cpp  cInventory.h
client/src/cMenu/cWidgets/: cWidget.cpp  cWidget.h
client/src/consts/: consts.h
client/src/engine/: engine.cpp  engine.h
client/tests/: CMakeLists.txt  main.cpp
utils/MapEditor/: CMakeLists.txt  engine.cpp  engine.h  mainwindow.cpp  mainwindow.h
